appId: com.curso.shopdemo
---
- launchApp:
    clearState: true
- tapOn:
    id: "input-email"
- inputText: "cliente@shopdemo.com"
- tapOn:
    id: "input-senha"
- inputText: "123456"

- tapOn: "btn-entrar"

- extendedWaitUntil:
    visible:
        id: "tela-catalogo"
    timeout: 40000

- assertVisible: 
    id: "tela-catalogo"
